--- a/package.json
+++ b/package.json
@@ -35,17 +35,24 @@
     "react-native-svg": "^15.11.1",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-datepicker": "^4.19.6",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
     "typescript": "^5.3.3",
     "webpack-bundle-analyzer": "^4.10.2"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "overrides": {
+    "lucide-react-native": {
+      "react": "19.0.0"
+    }
+  }
 }
