--- a/app.json
+++ b/app.json
@@ -1,30 +1,50 @@
 {
   "expo": {
-    "name": "facturamovil-app",
-    "slug": "facturamovil-app",
+    "name": "Factura Móvil",
+    "slug": "factura-movil",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "scheme": "facturamovil",
     "userInterfaceStyle": "light",
     "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.rfernandez1977.facturamovil"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.rfernandez1977.facturamovil",
+      "versionCode": 1,
+      "permissions": [
+        "INTERNET",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "output": "server",
       "favicon": "./assets/images/favicon.png",
       "bundler": "metro"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1a538017-5dcc-483c-9651-c41cc52047c9"
+      }
+    },
+    "experiments": {
+      "typedRoutes": true
     }
   }
 }
