--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-dom": "19.0.0",
@@ -46,7 +46,7 @@
     "@types/react-datepicker": "^4.19.6",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
-    "typescript": "^5.3.3",
+    "typescript": "~5.8.3",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
