feat: Resolver problema de red Android 9+ y generar APK funcional - Configurar network security para permitir HTTP en produccion.facturamovil.cl - Generar nueva APK con configuración aplicada - Actualizar documentación del memory bank - Build exitoso: https://expo.dev/artifacts/eas/u52M7QbKz6Jvt5U6JS2WT9.apk

--- a/app.json
+++ b/app.json
@@ -4,11 +4,9 @@
     "slug": "factura-movil",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "facturamovil",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,10 +18,6 @@
       "bundleIdentifier": "com.rfernandez1977.facturamovil"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.rfernandez1977.facturamovil",
       "versionCode": 1,
       "permissions": [
@@ -31,11 +25,11 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
-      ]
+      ],
+      "networkSecurityConfig": "./android/app/src/main/res/xml/network_security_config.xml"
     },
     "web": {
       "output": "server",
-      "favicon": "./assets/images/favicon.png",
       "bundler": "metro"
     },
     "extra": {
