--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:web": "EXPO_NO_TELEMETRY=1 expo export --platform web",
     "analyze": "ANALYZE=true expo export --platform web",
     "lint": "expo lint",
-    "test:api": "node test/api-test.ts"
+    "test:api": "node test/api-test.ts",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
